<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_check_in_out">


    <fragment
        android:id="@+id/nav_check_in_out"
        android:name="com.example.igecuser.Fragments.CheckInOutFragment"
        android:label="@string/check_in_out"
        tools:layout="@layout/fragment_check_in_out" />
    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.igecuser.Fragments.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/nav_gross_salary"
        android:name="com.example.igecuser.Fragments.GrossSalaryFragment"
        android:label="@string/gross_salary"
        tools:layout="@layout/fragment_gross_salary" />

    <fragment
        android:id="@+id/nav_send_vacation_request"
        android:name="com.example.igecuser.Fragments.SendVacationRequestFragment"
        android:label="@string/send_vacation_request"
        tools:layout="@layout/fragment_vacation_request" />

    <fragment
        android:id="@+id/nav_vacation_requests"
        android:name="com.example.igecuser.Fragments.VacationRequestsFragment"
        android:label="@string/vacation_requests"
        tools:layout="@layout/fragment_vacation_requests" />

    <fragment
        android:id="@+id/nav_vacations_log"
        android:name="com.example.igecuser.Fragments.VacationsLogFragment"
        android:label="@string/vacations_log"
        tools:layout="@layout/fragment_vacations_log" />

    <fragment
        android:id="@+id/nav_send_transfer_request"
        android:name="com.example.igecuser.Fragments.SendTransferRequest"
        android:label="@string/send_transfer_request"
        tools:layout="@layout/fragment_send_transfer_request" />


    <fragment
        android:id="@+id/nav_transfer_requests"
        android:name="com.example.igecuser.Fragments.TransferRequestsFragment"
        android:label="@string/transfer_requests"
        tools:layout="@layout/fragment_transfer_requests" />



    <fragment
        android:id="@+id/nav_project_summary"
        android:name="com.example.igecuser.Fragments.ProjectSummaryFragment"
        android:label="@string/project_summary"
        tools:layout="@layout/fragment_project_summary" />



</navigation>