<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_CompanyName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_CompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="true"
            android:hint="@string/company_name"
            android:inputType="text"
            android:padding="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_CompanyEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/textInputLayout_CompanyName"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_CompanyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="true"
            android:hint="@string/company_email"
            android:inputType="text"
            android:padding="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_CompanyPhoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/textInputLayout_CompanyEmail"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_CompanyPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="true"
            android:hint="@string/company_phone_number"
            android:inputType="text"
            android:padding="14dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_UseStartDate"
        style="@style/DatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        android:layout_below="@id/textInputLayout_CompanyPhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_UseStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:inputType="date"
            android:enabled="false"
            android:padding="14dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Button_Scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/Done"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:layout_below="@id/textInputLayout_UseStartDate"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>