<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.VacationRequest">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_VacationDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_VacationDays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_VacationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vacation_date"
            android:inputType="date"
            android:padding="14dp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_VacationDays"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textInputLayout_VacationDate"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_VacationDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vacation_days"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_VacationNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="250"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_VacationDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput_VacationNote"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/vacation_reason"
            android:inputType="textMultiLine"
            android:padding="14dp"
            android:gravity="top"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Button_SendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_VacationNote" />

</androidx.constraintlayout.widget.ConstraintLayout>